Thu Oct 15 11:06:41 1998  Gray Watson  <gray@burger.letters.com>

	* Released dmalloc version 4.0.3.

	* Found and fixed a bug when reallocing a previous valloced
        section.  Not a good idea anyway since it will not preserve the
        block-aligned status (should it).

	* Released dmalloc version 4.0.2.

	* Fixed a problem in return.h and DMALLOC_UNKNOWN_FILE.  Ugh.
        Thanks much to Mike Sacauskis for pointing this out.

Thu Oct  8 11:07:25 1998  Gray Watson  <gray@burger.letters.com>

	* Released dmalloc version 4.0.1.

	* Added startup messages acknowledging the thread status.  Added
        error.o to the thread object list.

Wed Oct  7 14:52:14 1998  Gray Watson  <gray@burger.letters.com>

	* Fixed problem with thread compilation and chunk.c.  Thanks much
        to Didier Verna for pointing out this problem.

	* Fixed possible race condition with synchronizing with external
        sbrk calls.

Mon Oct  5 22:56:46 1998  Gray Watson  <gray@burger.letters.com>

	* Migrated in new argv code.

Sun Oct  4 22:56:46 1998  Gray Watson  <gray@burger.letters.com>

	* Released dmalloc version 4.0.0.

	* Updated the manual a bit.

	* Made a small change to the solaris return.h code.  Thanks
        Alexandre.

Tue Sep 29 09:26:50 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.0.0 beta2. 

	* Aligned valloc to block alignment as it should have been with
        fence post checking installed.

	* Renamed some internal variables and macros better names.

Mon Sep 28 17:55:24 1998  Gray Watson  <gray@burger.letters.com>

	* Added better auto-configuration of valloc.

	* Improved the log-trans output messages.

	* Added the printf attribute to error.c's dmalloc_message.  Fixed
        a number of casting problems.

Fri Sep 18 13:37:23 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.0.0 beta.

	* Added recalloc support into the library.  Thanks to Nick
        Albright for suggesting it.
